--- a/produtos.css
+++ b/produtos.css
@@ -2,6 +2,18 @@ header{
     background-color: #BBB;
 }
 
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0px auto;
+}
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
 nav li{
     display: inline;
     margin: 0 0 0 15px;
@@ -14,3 +26,26 @@ nav a{
     font-weight: bold;
     font-size: 22px;
 }
+.produtos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+
+}
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+}
+.produtos h2{
+    font-weight: bold;
+    font-size: 30px;
+    
+}.produto-descricao{
+    font-size: 18px;
+}
+.produto-preco{
+    font-weight: bold;
+}
+
