--- a/style.css
+++ b/style.css
@@ -1,42 +1,103 @@
-
-#banner{
-    width: 100%;
-}
-.principal{
-    background-color: #CCC;
-    padding: 30px;
-}
-h1{
-    text-align: center;
+header{
+    background-color: #BBB;
 }
 
-p{
-    text-align: center;
-}
-#missao{
-    font-size: 20px;
-}
- em strong {
-    color: red;
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0px auto;
 }
 
-.beneficios{
-    background-color: #fff;
-    padding: 20px;
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
-h2{
-    text-align: center;
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
 }
-ul{
+
+nav a{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: bold;
+    font-size: 22px;
+}
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+
+.produtos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+
+}
+.produtos li{
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 25%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000;
+    border-radius: 10px;
 }
-.itens {
-    font-style: italic;
-    font-size: larger;
+
+.produtos li:hover{
+    border-color: #C78C19;
 }
-.imagBeneficios{
+.produtos li:active{
+    border-color: #088C19;
+}
+
+.produtos li:hover h2{
+    font-size: 34px;
+}
+.produtos h2{
+    font-weight: bold;
+    font-size: 30px;    
+}
+.produto-descricao{
+    font-size: 18px;
+}
+.produto-preco{
+    font-weight: bold;
+    font-size: 22px;
+    margin-top: 10px;
+}
+footer{
+    text-align: center;
+    background: url("imagens/bg.jpg");
+}
+
+.copyright{
+    color: #fff;
+}
+
+main{
+    width: 940px;
+    margin: 0 auto;
+}
+
+form{
+    margin: 40px 0;
+}
+
+form label{
+    display: block;
+    font-size: 20px;
+    margin: 0 0 20px;
+}
+
+form input{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 20px;
     width: 50%;
 }
