--- a/style.css
+++ b/style.css
@@ -89,15 +89,18 @@ form{
     margin: 40px 0;
 }
 
-form label{
+form label, form legend{
     display: block;
     font-size: 20px;
     margin: 0 0 20px;
 }
 
-form input{
+.input-padrao{
     display: block;
     margin: 0 0 20px;
     padding: 10px 20px;
     width: 50%;
+}
+.input-checkbox{
+    margin: 20px 0;
 }
